CompatHelper: bump compat for NCDatasets to 0.14, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ Graphs = "1.4"
 IfElse = "0.1"
 LoggingExtras = "0.4.6,0.5,1"
 LoopVectorization = "0.12"
-NCDatasets = "0.13.2"
+NCDatasets = "0.13.2, 0.14"
 Parameters = "0.12"
 Polyester = "0.7"
 Polynomials = "3,4"
